# PolicyMCP

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/asf_policy_mcp/: fetcher.py  server.py  sources.py  tools.py
tests/: test_tools.py
